Projet-final-VersionFinale/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: noun25/foot-frontend:latest # Pense à incrémenter ta version (ex: v4) après le rebuild !
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP # Changement : Interne uniquement
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
