Projet-final-VersionFinale/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foot-ingress
  annotations:
    # On réactive le rewrite
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Règle Backend : Capture "/api" (groupe 1) et "la suite" (groupe 2)
      # Le rewrite /$2 ne gardera que "la suite".
      # Exemple : /api/users devient /users
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      
      # Règle Frontend : Capture "rien" (groupe 1 vide) et "tout le chemin" (groupe 2)
      # Le rewrite /$2 gardera tout le chemin.
      # Exemple : /main.js reste /main.js
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
